JumpScript/tests/baselines/reference/parserShorthandPropertyAssignment5.errors.txt
tests/cases/conformance/parser/ecmascript6/ShorthandPropertyAssignment/parserShorthandPropertyAssignment5.jump(2,18): error TS1162: An object member cannot be declared optional.


==== tests/cases/conformance/parser/ecmascript6/ShorthandPropertyAssignment/parserShorthandPropertyAssignment5.jump (1 errors) ====
    var greet = "hello";
    var obj = { greet? }; 
                     ~
!!! error TS1162: An object member cannot be declared optional.